# internal/materi/handler.go
@@ -48,3 +48,37 @@ func (h *Handler) GetMateriPeserta(c *fiber.Ctx) error {
 
 	return response.Success(c, data)
 }
+
+// GetMateriPrivatePeserta godoc
+// @Summary Get materi private peserta
+// @Description Get list materi private berdasarkan modul
+// @Tags Materi
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param type query string false "Filter tipe materi (video | document)"
+// @Router /materi/peserta/private [get]
+func (h *Handler) GetMateriPrivatePeserta(c *fiber.Ctx) error {
+
+	userID := c.Locals("sub").(int)
+
+	// optional query
+	materiType := c.Query("type")
+
+	var typePtr *string
+	if materiType != "" {
+		typePtr = &materiType
+	}
+
+	data, err := h.Service.GetMateriPrivatePeserta(
+		c.Context(),
+		userID,
+		typePtr,
+	)
+
+	if err != nil {
+		return response.Error(c, 400, err.Error(), "BAD_REQUEST", nil)
+	}
+
+	return response.Success(c, data)
+}
