# internal/materi/route.go
@@ -6,5 +6,6 @@ func RegisterRoutes(r fiber.Router, handler *Handler) {
 
 	materi := r.Group("/materi")
 
+	materi.Get("/peserta/private", handler.GetMateriPrivatePeserta)
 	materi.Get("/peserta/:id_modul", handler.GetMateriPeserta)
 }
